pkg/cfn/template/testdata/cluster-example-1.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "EKS cluster (dedicated VPC: true, dedicated IAM: true) [created and managed by eksctl]",
    "Resources": {
        "ClusterSharedNodeSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Communication between all nodes in the cluster",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/ClusterSharedNodeSecurityGroup"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "d9b0ace1-e046-4559-bdd7-391c9527bb79"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "ControlPlane": {
            "Type": "AWS::EKS::Cluster",
            "Properties": {
                "Name": "wonderful-party-1565212003",
                "ResourcesVpcConfig": {
                    "SecurityGroupIds": [
                        {
                            "Ref": "ControlPlaneSecurityGroup"
                        }
                    ],
                    "SubnetIds": [
                        {
                            "Ref": "SubnetPublicUSWEST2B"
                        },
                        {
                            "Ref": "SubnetPublicUSWEST2D"
                        },
                        {
                            "Ref": "SubnetPublicUSWEST2C"
                        },
                        {
                            "Ref": "SubnetPrivateUSWEST2B"
                        },
                        {
                            "Ref": "SubnetPrivateUSWEST2D"
                        },
                        {
                            "Ref": "SubnetPrivateUSWEST2C"
                        }
                    ]
                },
                "RoleArn": {
                    "Fn::GetAtt": "ServiceRole.Arn"
                },
                "Version": "1.13"
            }
        },
        "ControlPlaneSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Communication between the control plane and worker nodegroups",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/ControlPlaneSecurityGroup"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "4ed743ad-d815-424b-a2cc-6ba8beacc32d"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "IngressInterNodeGroupSG": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "Description": "Allow nodes to communicate with each other (all ports)",
                "FromPort": 0,
                "GroupId": {
                    "Ref": "ClusterSharedNodeSecurityGroup"
                },
                "IpProtocol": "-1",
                "SourceSecurityGroupId": {
                    "Ref": "ClusterSharedNodeSecurityGroup"
                },
                "ToPort": 65535
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/InternetGateway"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "311634e6-d6c3-4845-8db6-9cf8c9be3559"
                    }
                ]
            }
        },
        "NATGateway": {
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": "NATIP.AllocationId"
                },
                "SubnetId": {
                    "Ref": "SubnetPublicUSWEST2B"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/NATGateway"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "ae8b0835-0907-401a-9b62-4da13dfcf7ab"
                    }
                ]
            }
        },
        "NATIP": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Tags": [
                  {
                    "Key": "yor_trace",
                    "Value": "70e08611-5007-4122-92aa-f5b738776dd6"
                  }
                ],
                "Domain": "vpc"
            }
        },
        "NATPrivateSubnetRouteUSWEST2B": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "NATGateway"
                },
                "RouteTableId": {
                    "Ref": "PrivateRouteTableUSWEST2B"
                }
            }
        },
        "NATPrivateSubnetRouteUSWEST2C": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "NATGateway"
                },
                "RouteTableId": {
                    "Ref": "PrivateRouteTableUSWEST2C"
                }
            }
        },
        "NATPrivateSubnetRouteUSWEST2D": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "NATGateway"
                },
                "RouteTableId": {
                    "Ref": "PrivateRouteTableUSWEST2D"
                }
            }
        },
        "PolicyCloudWatchMetrics": {
            "Type": "AWS::IAM::Policy",
            "Properties": {
                "PolicyDocument": {
                    "Statement": [
                        {
                            "Action": [
                                "cloudwatch:PutMetricData"
                            ],
                            "Effect": "Allow",
                            "Resource": "*"
                        }
                    ],
                    "Version": "2012-10-17"
                },
                "PolicyName": {
                    "Fn::Sub": "${AWS::StackName}-PolicyCloudWatchMetrics"
                },
                "Roles": [
                    {
                        "Ref": "ServiceRole"
                    }
                ]
            }
        },
        "PolicyNLB": {
            "Type": "AWS::IAM::Policy",
            "Properties": {
                "PolicyDocument": {
                    "Statement": [
                        {
                            "Action": [
                                "elasticloadbalancing:*",
                                "ec2:CreateSecurityGroup",
                                "ec2:Describe*"
                            ],
                            "Effect": "Allow",
                            "Resource": "*"
                        }
                    ],
                    "Version": "2012-10-17"
                },
                "PolicyName": {
                    "Fn::Sub": "${AWS::StackName}-PolicyNLB"
                },
                "Roles": [
                    {
                        "Ref": "ServiceRole"
                    }
                ]
            }
        },
        "PrivateRouteTableUSWEST2B": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/PrivateRouteTableUSWEST2B"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "38d9264b-2161-4582-b2c2-1855096b0558"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "PrivateRouteTableUSWEST2C": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/PrivateRouteTableUSWEST2C"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "da348fb7-c481-4bd4-91ce-4c4a0f0c6f8d"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "PrivateRouteTableUSWEST2D": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/PrivateRouteTableUSWEST2D"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "ed3f6a26-4a81-46c2-bab7-b7346e5ad5a8"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/PublicRouteTable"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "a8fde872-0db2-42da-96bf-7bd5b4f0420e"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "PublicSubnetRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                },
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }
            }
        },
        "RouteTableAssociationPrivateUSWEST2B": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTableUSWEST2B"
                },
                "SubnetId": {
                    "Ref": "SubnetPrivateUSWEST2B"
                }
            }
        },
        "RouteTableAssociationPrivateUSWEST2C": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTableUSWEST2C"
                },
                "SubnetId": {
                    "Ref": "SubnetPrivateUSWEST2C"
                }
            }
        },
        "RouteTableAssociationPrivateUSWEST2D": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTableUSWEST2D"
                },
                "SubnetId": {
                    "Ref": "SubnetPrivateUSWEST2D"
                }
            }
        },
        "RouteTableAssociationPublicUSWEST2B": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "SubnetPublicUSWEST2B"
                }
            }
        },
        "RouteTableAssociationPublicUSWEST2C": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "SubnetPublicUSWEST2C"
                }
            }
        },
        "RouteTableAssociationPublicUSWEST2D": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "SubnetPublicUSWEST2D"
                }
            }
        },
        "ServiceRole": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "Tags": [
                  {
                    "Key": "yor_trace",
                    "Value": "938fe320-5e92-4c4c-ad14-60d44fdb8243"
                  }
                ],
                "AssumeRolePolicyDocument": {
                    "Statement": [
                        {
                            "Action": [
                                "sts:AssumeRole"
                            ],
                            "Effect": "Allow",
                            "Principal": {
                                "Service": [
                                    "eks.amazonaws.com"
                                ]
                            }
                        }
                    ],
                    "Version": "2012-10-17"
                },
                "ManagedPolicyArns": [
                    "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
                ]
            }
        },
        "SubnetPrivateUSWEST2B": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-west-2b",
                "CidrBlock": "192.168.96.0/19",
                "Tags": [
                    {
                        "Key": "kubernetes.io/role/internal-elb",
                        "Value": "1"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/SubnetPrivateUSWEST2B"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "9c739c7c-ffbf-4149-b4b7-7d14b4d5b701"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "SubnetPrivateUSWEST2C": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-west-2c",
                "CidrBlock": "192.168.160.0/19",
                "Tags": [
                    {
                        "Key": "kubernetes.io/role/internal-elb",
                        "Value": "1"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/SubnetPrivateUSWEST2C"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "8bfdcb86-2351-47a5-81cc-08d7f1b54a60"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "SubnetPrivateUSWEST2D": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-west-2d",
                "CidrBlock": "192.168.128.0/19",
                "Tags": [
                    {
                        "Key": "kubernetes.io/role/internal-elb",
                        "Value": "1"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/SubnetPrivateUSWEST2D"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "35ea4bfa-7423-4452-958e-9653c1d8efeb"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "SubnetPublicUSWEST2B": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-west-2b",
                "CidrBlock": "192.168.0.0/19",
                "Tags": [
                    {
                        "Key": "kubernetes.io/role/elb",
                        "Value": "1"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/SubnetPublicUSWEST2B"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "6a264c94-ea3c-47e4-8213-e85618573c30"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "SubnetPublicUSWEST2C": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-west-2c",
                "CidrBlock": "192.168.64.0/19",
                "Tags": [
                    {
                        "Key": "kubernetes.io/role/elb",
                        "Value": "1"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/SubnetPublicUSWEST2C"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "ecd5ad0c-7d83-480b-bd87-0458780afeb0"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "SubnetPublicUSWEST2D": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-west-2d",
                "CidrBlock": "192.168.32.0/19",
                "Tags": [
                    {
                        "Key": "kubernetes.io/role/elb",
                        "Value": "1"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/SubnetPublicUSWEST2D"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "fd48cb45-cdcc-4f1a-a28f-e9e595768047"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "192.168.0.0/16",
                "EnableDnsHostnames": true,
                "EnableDnsSupport": true,
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/VPC"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "2ad4b259-34bd-43d1-930a-767046c3637b"
                    }
                ]
            }
        },
        "VPCGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                },
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        }
    },
    "Outputs": {
        "ARN": {
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}::ARN"
                }
            },
            "Value": {
                "Fn::GetAtt": "ControlPlane.Arn"
            }
        },
        "CertificateAuthorityData": {
            "Value": {
                "Fn::GetAtt": "ControlPlane.CertificateAuthorityData"
            }
        },
        "ClusterStackName": {
            "Value": {
                "Ref": "AWS::StackName"
            }
        },
        "Endpoint": {
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}::Endpoint"
                }
            },
            "Value": {
                "Fn::GetAtt": "ControlPlane.Endpoint"
            }
        },
        "FeatureNATMode": {
            "Value": "Single"
        },
        "SecurityGroup": {
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}::SecurityGroup"
                }
            },
            "Value": {
                "Ref": "ControlPlaneSecurityGroup"
            }
        },
        "ServiceRoleARN": {
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}::ServiceRoleARN"
                }
            },
            "Value": {
                "Fn::GetAtt": "ServiceRole.Arn"
            }
        },
        "SharedNodeSecurityGroup": {
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}::SharedNodeSecurityGroup"
                }
            },
            "Value": {
                "Ref": "ClusterSharedNodeSecurityGroup"
            }
        },
        "SubnetsPrivate": {
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}::SubnetsPrivate"
                }
            },
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Ref": "SubnetPrivateUSWEST2B"
                        },
                        {
                            "Ref": "SubnetPrivateUSWEST2D"
                        },
                        {
                            "Ref": "SubnetPrivateUSWEST2C"
                        }
                    ]
                ]
            }
        },
        "SubnetsPublic": {
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}::SubnetsPublic"
                }
            },
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Ref": "SubnetPublicUSWEST2B"
                        },
                        {
                            "Ref": "SubnetPublicUSWEST2D"
                        },
                        {
                            "Ref": "SubnetPublicUSWEST2C"
                        }
                    ]
                ]
            }
        },
        "VPC": {
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}::VPC"
                }
            },
            "Value": {
                "Ref": "VPC"
            }
        }
    }
}
