pkg/cfn/template/testdata/cluster-example-2.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "EKS cluster (dedicated VPC: true, dedicated IAM: true) [created and managed by eksctl]",
    "Resources": {
        "ClusterSharedNodeSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Communication between all nodes in the cluster",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/ClusterSharedNodeSecurityGroup"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "77e25c1c-5dc4-4e73-9f6a-83df2bb6cc91"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "ControlPlane": {
            "Type": "AWS::EKS::Cluster",
            "Properties": {
                "Name": "example-2",
                "ResourcesVpcConfig": {
                    "SecurityGroupIds": [
                        {
                            "Ref": "ControlPlaneSecurityGroup"
                        }
                    ],
                    "SubnetIds": [
                        {
                            "Ref": "SubnetPublicUSWEST2C"
                        },
                        {
                            "Ref": "SubnetPublicUSWEST2D"
                        },
                        {
                            "Ref": "SubnetPublicUSWEST2B"
                        },
                        {
                            "Ref": "SubnetPrivateUSWEST2B"
                        },
                        {
                            "Ref": "SubnetPrivateUSWEST2C"
                        },
                        {
                            "Ref": "SubnetPrivateUSWEST2D"
                        }
                    ]
                },
                "RoleArn": {
                    "Fn::GetAtt": "ServiceRole.Arn"
                },
                "Version": "1.13"
            }
        },
        "ControlPlaneSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Communication between the control plane and worker nodegroups",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/ControlPlaneSecurityGroup"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "35625743-06e5-4813-8902-4fc23c5d44dc"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "IngressInterNodeGroupSG": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "Description": "Allow nodes to communicate with each other (all ports)",
                "FromPort": 0,
                "GroupId": {
                    "Ref": "ClusterSharedNodeSecurityGroup"
                },
                "IpProtocol": "-1",
                "SourceSecurityGroupId": {
                    "Ref": "ClusterSharedNodeSecurityGroup"
                },
                "ToPort": 65535
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/InternetGateway"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "193980b2-cb2e-4d51-8613-eb80ff17079e"
                    }
                ]
            }
        },
        "NATGateway": {
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": "NATIP.AllocationId"
                },
                "SubnetId": {
                    "Ref": "SubnetPublicUSWEST2D"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/NATGateway"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "d9ebf114-d6c4-4a61-bc22-974479c2ded3"
                    }
                ]
            }
        },
        "NATIP": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Tags": [
                  {
                    "Key": "yor_trace",
                    "Value": "fed84811-fe3e-406c-8365-c6fc6bd63bae"
                  }
                ],
                "Domain": "vpc"
            }
        },
        "NATPrivateSubnetRouteUSWEST2B": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "NATGateway"
                },
                "RouteTableId": {
                    "Ref": "PrivateRouteTableUSWEST2B"
                }
            }
        },
        "NATPrivateSubnetRouteUSWEST2C": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "NATGateway"
                },
                "RouteTableId": {
                    "Ref": "PrivateRouteTableUSWEST2C"
                }
            }
        },
        "NATPrivateSubnetRouteUSWEST2D": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "NATGateway"
                },
                "RouteTableId": {
                    "Ref": "PrivateRouteTableUSWEST2D"
                }
            }
        },
        "PolicyCloudWatchMetrics": {
            "Type": "AWS::IAM::Policy",
            "Properties": {
                "PolicyDocument": {
                    "Statement": [
                        {
                            "Action": [
                                "cloudwatch:PutMetricData"
                            ],
                            "Effect": "Allow",
                            "Resource": "*"
                        }
                    ],
                    "Version": "2012-10-17"
                },
                "PolicyName": {
                    "Fn::Sub": "${AWS::StackName}-PolicyCloudWatchMetrics"
                },
                "Roles": [
                    {
                        "Ref": "ServiceRole"
                    }
                ]
            }
        },
        "PolicyNLB": {
            "Type": "AWS::IAM::Policy",
            "Properties": {
                "PolicyDocument": {
                    "Statement": [
                        {
                            "Action": [
                                "elasticloadbalancing:*",
                                "ec2:CreateSecurityGroup",
                                "ec2:Describe*"
                            ],
                            "Effect": "Allow",
                            "Resource": "*"
                        }
                    ],
                    "Version": "2012-10-17"
                },
                "PolicyName": {
                    "Fn::Sub": "${AWS::StackName}-PolicyNLB"
                },
                "Roles": [
                    {
                        "Ref": "ServiceRole"
                    }
                ]
            }
        },
        "PrivateRouteTableUSWEST2B": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/PrivateRouteTableUSWEST2B"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "a6c46a03-fd73-4eac-9435-1c6dd57a8f7f"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "PrivateRouteTableUSWEST2C": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/PrivateRouteTableUSWEST2C"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "fde2da23-8151-4a55-89b5-9160e8c389ff"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "PrivateRouteTableUSWEST2D": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/PrivateRouteTableUSWEST2D"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "b09214e0-06fa-4fc6-88bc-5bee194a020b"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/PublicRouteTable"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "ee15724c-8f74-4f03-972c-6252611a4ebf"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "PublicSubnetRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                },
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }
            }
        },
        "RouteTableAssociationPrivateUSWEST2B": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTableUSWEST2B"
                },
                "SubnetId": {
                    "Ref": "SubnetPrivateUSWEST2B"
                }
            }
        },
        "RouteTableAssociationPrivateUSWEST2C": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTableUSWEST2C"
                },
                "SubnetId": {
                    "Ref": "SubnetPrivateUSWEST2C"
                }
            }
        },
        "RouteTableAssociationPrivateUSWEST2D": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTableUSWEST2D"
                },
                "SubnetId": {
                    "Ref": "SubnetPrivateUSWEST2D"
                }
            }
        },
        "RouteTableAssociationPublicUSWEST2B": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "SubnetPublicUSWEST2B"
                }
            }
        },
        "RouteTableAssociationPublicUSWEST2C": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "SubnetPublicUSWEST2C"
                }
            }
        },
        "RouteTableAssociationPublicUSWEST2D": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "SubnetPublicUSWEST2D"
                }
            }
        },
        "ServiceRole": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "Tags": [
                  {
                    "Key": "yor_trace",
                    "Value": "1087ec4b-2726-4012-8225-693301cc8ce7"
                  }
                ],
                "AssumeRolePolicyDocument": {
                    "Statement": [
                        {
                            "Action": [
                                "sts:AssumeRole"
                            ],
                            "Effect": "Allow",
                            "Principal": {
                                "Service": [
                                    "eks.amazonaws.com"
                                ]
                            }
                        }
                    ],
                    "Version": "2012-10-17"
                },
                "ManagedPolicyArns": [
                    "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
                ]
            }
        },
        "SubnetPrivateUSWEST2B": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-west-2b",
                "CidrBlock": "192.168.128.0/19",
                "Tags": [
                    {
                        "Key": "kubernetes.io/role/internal-elb",
                        "Value": "1"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/SubnetPrivateUSWEST2B"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "38b31bde-74a6-40f9-a1ae-17efc1526bf8"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "SubnetPrivateUSWEST2C": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-west-2c",
                "CidrBlock": "192.168.160.0/19",
                "Tags": [
                    {
                        "Key": "kubernetes.io/role/internal-elb",
                        "Value": "1"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/SubnetPrivateUSWEST2C"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "627c45d4-39c9-4df9-a01b-ce7c961c7c22"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "SubnetPrivateUSWEST2D": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-west-2d",
                "CidrBlock": "192.168.96.0/19",
                "Tags": [
                    {
                        "Key": "kubernetes.io/role/internal-elb",
                        "Value": "1"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/SubnetPrivateUSWEST2D"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "c2aacccd-3705-4224-a6eb-55217a1b69d2"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "SubnetPublicUSWEST2B": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-west-2b",
                "CidrBlock": "192.168.32.0/19",
                "Tags": [
                    {
                        "Key": "kubernetes.io/role/elb",
                        "Value": "1"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/SubnetPublicUSWEST2B"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "d3e0fde6-fe6e-41a1-8099-046c1a4b1e9a"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "SubnetPublicUSWEST2C": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-west-2c",
                "CidrBlock": "192.168.64.0/19",
                "Tags": [
                    {
                        "Key": "kubernetes.io/role/elb",
                        "Value": "1"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/SubnetPublicUSWEST2C"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "ffc8afa3-4a6a-4801-b861-8cf84996152b"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "SubnetPublicUSWEST2D": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-west-2d",
                "CidrBlock": "192.168.0.0/19",
                "Tags": [
                    {
                        "Key": "kubernetes.io/role/elb",
                        "Value": "1"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/SubnetPublicUSWEST2D"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "d91e1016-4ed1-4855-bbae-3f274a21edee"
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "192.168.0.0/16",
                "EnableDnsHostnames": true,
                "EnableDnsSupport": true,
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}/VPC"
                        }
                    },
                    {
                        "Key": "yor_trace",
                        "Value": "2658dfea-2cea-4468-aacf-246f2685877d"
                    }
                ]
            }
        },
        "VPCGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                },
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        }
    },
    "Outputs": {
        "ARN": {
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}::ARN"
                }
            },
            "Value": {
                "Fn::GetAtt": "ControlPlane.Arn"
            }
        },
        "CertificateAuthorityData": {
            "Value": {
                "Fn::GetAtt": "ControlPlane.CertificateAuthorityData"
            }
        },
        "ClusterStackName": {
            "Value": {
                "Ref": "AWS::StackName"
            }
        },
        "Endpoint": {
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}::Endpoint"
                }
            },
            "Value": {
                "Fn::GetAtt": "ControlPlane.Endpoint"
            }
        },
        "FeatureNATMode": {
            "Value": "Single"
        },
        "SecurityGroup": {
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}::SecurityGroup"
                }
            },
            "Value": {
                "Ref": "ControlPlaneSecurityGroup"
            }
        },
        "ServiceRoleARN": {
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}::ServiceRoleARN"
                }
            },
            "Value": {
                "Fn::GetAtt": "ServiceRole.Arn"
            }
        },
        "SharedNodeSecurityGroup": {
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}::SharedNodeSecurityGroup"
                }
            },
            "Value": {
                "Ref": "ClusterSharedNodeSecurityGroup"
            }
        },
        "SubnetsPrivate": {
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}::SubnetsPrivate"
                }
            },
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Ref": "SubnetPrivateUSWEST2B"
                        },
                        {
                            "Ref": "SubnetPrivateUSWEST2C"
                        },
                        {
                            "Ref": "SubnetPrivateUSWEST2D"
                        }
                    ]
                ]
            }
        },
        "SubnetsPublic": {
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}::SubnetsPublic"
                }
            },
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Ref": "SubnetPublicUSWEST2C"
                        },
                        {
                            "Ref": "SubnetPublicUSWEST2D"
                        },
                        {
                            "Ref": "SubnetPublicUSWEST2B"
                        }
                    ]
                ]
            }
        },
        "VPC": {
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}::VPC"
                }
            },
            "Value": {
                "Ref": "VPC"
            }
        }
    }
}
